--- a/raw_data/load_1996_ppcs.Rmd
+++ b/raw_data/load_1996_ppcs.Rmd
@@ -134,6 +134,12 @@ ppcs_1996 <- ppcs_1996 %>%
   ))
 ```
 
+```{r}
+ppcs_1996 <- ppcs_1996 %>%
+  mutate(off_hispanic = 0)
+
+```
+
 #Type of incident
 Gathered data and then took all the values where the occurence was Once or More than once
 
@@ -265,7 +271,7 @@ ppcs_1996 <- ppcs_1996 %>%
 ##Cleaned Data Frame
 ```{r}
 ppcs_1996_cleaned <- ppcs_1996 %>%
-  select(civilian_race, civilian_age, civilian_gender, civilian_income, civilian_employed, population_size, time_of_encounter, off_black, off_white, off_other, off_split, type_of_incident, civilian_behavior, civilian_searched, civilian_arrested, civilian_guilty_of_illegal, civilian_injured, excess_force, force)
+  select(civilian_race, civilian_age, civilian_gender, civilian_income, civilian_employed, population_size, time_of_encounter, off_black, off_white, off_other, off_split, off_hispanic, type_of_incident, civilian_behavior, civilian_searched, civilian_arrested, civilian_guilty_of_illegal, civilian_injured, excess_force, force)
 
 ```
 #Add year column
