2011 use force fix attempt 1

--- a/raw_data/ppcs2011.Rmd
+++ b/raw_data/ppcs2011.Rmd
@@ -220,18 +220,18 @@ ppcs_2011 <- ppcs_2011 %>%
 #FORCE USE 
 ppcs_2011 <- ppcs_2011 %>% 
   mutate(force = case_when(
-    ((V148 == '(1) Yes')| 
-    (V289 == '(1) Yes') | 
-    (V152 == '(1) Yes') | 
-    (V293 == '(1) Yes') | 
-    (V158 == '(1) Yes') |
-    (V299 == '(1) Yes') |
-    (V150 == '(1) Yes') |
-    (V291 == '(1) Yes') |
-    (V154 == '(1) Yes') |
-    (V156 == '(1) Yes') |
-    (V295 == '(1) Yes') |
-    (V297 == '(1) Yes')) ~ 1,
+    (V148 == '(1) Yes') ~ 1, 
+    (V289 == '(1) Yes') ~ 1,
+    (V152 == '(1) Yes') ~ 1,
+    (V293 == '(1) Yes') ~ 1,
+    (V158 == '(1) Yes') ~ 1,
+    (V299 == '(1) Yes') ~ 1,
+    (V150 == '(1) Yes') ~ 1,
+    (V291 == '(1) Yes') ~ 1,
+    (V154 == '(1) Yes') ~ 1,
+    (V156 == '(1) Yes') ~ 1,
+    (V295 == '(1) Yes') ~ 1,
+    (V297 == '(1) Yes') ~ 1,
     TRUE ~ 0))
 ```
 
