--- a/raw_data/ppcs2011.Rmd
+++ b/raw_data/ppcs2011.Rmd
@@ -188,25 +188,11 @@ ppcs_2011 <- ppcs_2011 %>%
 ppcs_2011 <- ppcs_2011 %>% 
    mutate(type_of_incident = case_when(
                                        (V11 == '(1) Yes') ~ 1,
-                                       (V34 == '(1) Yes') ~ 1,
-                                       #(!is.na(V189)) ~ 2,
-                                       (V39 == '(1) Yes') ~ 1,
-                                       (V43 == '(1) Yes') ~ 1,
-                                       (V45 == '(1) Yes') ~ 1,
-                                       (V47 == '(1) Yes') ~ 1,
+                                       (!is.na(V34)) ~ 1,
                                        (V13 == '(1) Yes') ~ 2,
                                        (V15 == '(1) Yes') ~ 2,
-                                       (V210 == '(1) Yes') ~ 2,
-                                       (V212 == '(1) Yes')~2,
-                                       (V214 == '(1) Yes')~2,
-                                       (V216 == '(1) Yes')~2,
-                                       (V218 == '(1) Yes')~2,
-                                       (V220 == '(1) Yes')~2,
-                                       (V222 == '(1) Yes')~2,
-                                       (V224 == '(1) Yes')~2,
-                                       (V226 == '(1) Yes')~2,
-                                       (V228 == '(1) Yes')~2,
                                        (V7 == '(1) Yes') ~ 3,
+                                       #(V17 == '(1) Yes') ~ 3,
                                        TRUE ~ NA_real_))
 ```
 
