--- a/raw_data/load_1996_ppcs.Rmd
+++ b/raw_data/load_1996_ppcs.Rmd
@@ -23,6 +23,7 @@ ppcs_1996 <- read_ascii_setup('06999-0001-Data.txt','06999-0001-Setup.sas')
 ppcs_1996 <- ppcs_1996 %>%
   filter(LAST_12_MONTHS_CONTACT_W_POLICE_OFFICER == 'Yes' & CONTACTS_W_POLICE_OFFICER_IN_PERSON == 'Yes')
 
+dfcol <- data.frame(colnames(ppcs_1996)) %>% view
 ```
 
 #Civilian Race
@@ -231,6 +232,7 @@ ppcs_1996 <- ppcs_1996 %>%
 ```
 Civilian guilty of illegal dugs, alcohol, or weapon
 ```{r}
+
 ppcs_1996 <- ppcs_1996 %>%
   mutate(civilian_guilty_of_illegal = case_when(
     (OTHER_POSSESSION_OF_DRUGS == 'Yes' | OTHER_POSSESSION_OF_FIREARM_WEAPON == 'Yes') ~ 1,
