--- a/raw_data/load_1996_ppcs.Rmd
+++ b/raw_data/load_1996_ppcs.Rmd
@@ -20,10 +20,10 @@ library(foreign)
 #Load Data
 ```{r load-data}
 ppcs_1996 <- read_ascii_setup('06999-0001-Data.txt','06999-0001-Setup.sas')
-ppcs_1996 <- ppcs_1996 %>%
-  filter(LAST_12_MONTHS_CONTACT_W_POLICE_OFFICER == 'Yes' & CONTACTS_W_POLICE_OFFICER_IN_PERSON == 'Yes')
-
-dfcol <- data.frame(colnames(ppcs_1996)) %>% view
+# ppcs_1996 <- ppcs_1996 %>%
+#   filter(LAST_12_MONTHS_CONTACT_W_POLICE_OFFICER == 'Yes' & CONTACTS_W_POLICE_OFFICER_IN_PERSON == 'Yes')
+# 
+# dfcol <- data.frame(colnames(ppcs_1996)) %>% view
 ```
 
 #Civilian Race
