--- a/notes/20190722/20190722_sqf_logistic_regression_models_Adnan.Rmd
+++ b/notes/20190722/20190722_sqf_logistic_regression_models_Adnan.Rmd
@@ -121,7 +121,7 @@ temp <- sf_data1 %>%
                               "A" = "Asian", "Z" = "Other"))
 
 model_no_cntrl <- glm(any_force_used ~ race,
-                           data = log_panel_data,
+                           data = temp,
                            family = "binomial")
 
 exp(coef(model_no_cntrl))
