--- a/notes/20190722/20190722_sqf_logistic_regression_models_Adnan.Rmd
+++ b/notes/20190722/20190722_sqf_logistic_regression_models_Adnan.Rmd
@@ -129,3 +129,24 @@ ggplot() +
   ylim(.05, .3) + scale_x_continuous(breaks = c(0:23))
 
 ```
+
+```{r}
+
+mylogit_prec <- glm(any_force_used ~ race + sex + I(age^2) + inout + daytime + ac_incid + ac_time +
+                 offunif + typeofid + othpers + cs_bulge + cs_cloth + cs_casng + cs_lkout +
+                 cs_descr + cs_drgtr + cs_furtv + cs_vcrim +
+                 cs_objcs + cs_other + wepnfnd + addrpct + year,
+               data = log_panel_data,
+               family = "binomial")
+
+r <- GET('http://services5.arcgis.com/GfwWNkhOj9bNBqoJ/arcgis/rest/services/nypp/FeatureServer/0/query?where=1=1&outFields=*&outSR=4326&f=geojson')
+police_precincts <- readOGR(content(r,'text'), 'OGRGeoJSON', verbose = F)
+
+precincts <- police_precincts$Precinct
+tally <- rep(1, 77)
+gender <- rep("M", 77)
+tog <- data.frame(races, tally, gender)
+
+save(mylogit_prec, file = "C:/Users/Etta Rapp/Documents/GitHub/stop-question-frisk/raw_data/log_model.RData")
+
+```
